packages/client/src/App.css
.App {
  position: relative;
  background-color: var(--color-light-alt);
}

.App > div:not(.background) {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.App > div > * {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.App > div > header,
.App > div > footer {
  margin: calc(var(--spacing-2x) * 1.5) 0;
}

.App > div > .main {
  flex: 1;
}

.App > div > .main > * {
  margin: var(--spacing);
}

